--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -454,3 +454,15 @@ button:focus-visible {
     opacity: 1;
   }
 }
+
+.pagination {
+  --bs-pagination-bg: #a5a3e5 !important;
+  --bs-pagination-hover-bg: #4a7ba3 !important;
+  --bs-pagination-hover-color: #0e2b43 !important;
+  --bs-pagination-active-bg: #525791 !important;
+  --bs-pagination-active-border-color: #0d6efd00 !important;
+  --bs-pagination-disabled-bg: #a5a3e5 !important;
+}
+.page-link{
+  color: #0e2b43 !important;
+}
